<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HandScore</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="exam_name">考试名称：</string>
    <string name="resulttable_name">评分表：</string>
    <string name="studentid_name">学生考号:</string>
    <string name="font_name">字号</string>
    <string name="scanner_id">扫描学号</string>
    <string name="small_font">小</string>
    <string name="middle_font">中</string>
    <string name="large_font">大</string>
    <string name="operationmethod">步骤</string>
    <string name="operationcontent">内容</string>
    <string name="allotedscore">分值</string>
    <string name="thisscore">得分</string>
    <string name="scoreoperation">分数操作</string>
    <string name="scoreshow">得分</string>
    <string name="login">登陆</string>
    <string name="logout">退出</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="company_name">天堰医教</string>
    <string name="main_label">手持评分系统</string>
    <string name="login_username">用户名：</string>
    <string name="login_password">密      码：</string>
    <string name="login_saveinfo">记住我的信息</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="title_activity_score_view">ScoreViewActivity</string>
    <string name="title_activity_score_view_see">ScoreViewSeeActivity</string>
    <string name="title_activity_setting">SettingActivity</string>

</resources>