<?xml version="1.0" encoding="UTF-8"?>
<com.example.webview.tools.ResizeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/scoring1" >

    <TextView
        android:id="@+id/txvresulttable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="725dp"
        android:layout_marginTop="78dp"
        android:text="评分表："
        android:textColor="#333333"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/txvresulttablename"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="805dp"
        android:layout_marginTop="78dp"
        android:textColor="#333333"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/txvstudentexamname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="78dp"
        android:text="考试名："
        android:textColor="#333333"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/txvstudentshowexamname"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="109dp"
        android:layout_marginTop="78dp"
        android:textColor="#333333"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/txvstudentexamnumname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="304dp"
        android:layout_marginTop="78dp"
        android:text="考站："
        android:textColor="#333333"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/txvstudentshowexamnumname"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="358dp"
        android:layout_marginTop="78dp"
        android:textColor="#333333"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/txvfontsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft=" 1000dp"
        android:layout_marginTop="78dp"
        android:text="@string/font_name"
        android:textColor="#333333"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/txvshowstudentid"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="571dp"
        android:layout_marginTop="78dp"
        android:textColor="#333333"
        android:textSize="10pt" />

    <Button
        android:id="@+id/btn_smallfont"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="1204dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/fontbuttonselector"
        android:text="@string/small_font"
        android:textSize="13pt" />

    <Button
        android:id="@+id/btn_middlefont"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="1139dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/fontbuttonselector"
        android:text="@string/middle_font"
        android:textSize="13pt" />

    <Button
        android:id="@+id/btn_largefont"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginLeft="1074dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/fontbuttonselector"
        android:text="@string/large_font"
        android:textSize="13pt" />

    <TextView
        android:layout_width="1240dp"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="120dp"
        android:background="#15A2D5" />

    <TextView
        android:id="@+id/txvoperationmethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="117dp"
        android:text="@string/operationmethod"
        android:textColor="#E0EFFF"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/txvoperationcontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="289dp"
        android:layout_marginTop="117dp"
        android:text="@string/operationcontent"
        android:textColor="#E0EFFF"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/txvallotedscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="599dp"
        android:layout_marginTop="117dp"
        android:text="@string/allotedscore"
        android:textColor="#E0EFFF"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/txvthisscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="719dp"
        android:layout_marginTop="117dp"
        android:text="@string/thisscore"
        android:textColor="#E0EFFF"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/txvthiscontext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1139dp"
        android:layout_marginTop="117dp"
        android:text="评论"
        android:textColor="#E0EFFF"
        android:textSize="10pt" />

    <ListView
        android:id="@+id/mylist"
        android:layout_width="1240dp"
        android:layout_height="500dp"
        android:layout_alignRight="@+id/tv_setIP"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="157dp"
        android:divider="#222222"
        android:dividerHeight="2px"
        android:minHeight="40dp" >
    </ListView>

    <Button
        android:id="@+id/btn_preview"
        android:layout_width="89dp"
        android:layout_height="40dp"
        android:layout_marginLeft="1160dp"
        android:layout_marginTop="725dp"
        android:background="@drawable/perviewbuttonselector"
        android:text="预览"
        android:textColor="#333333"
        android:textSize="13pt" />

    <Button
        android:id="@+id/btn_scoreback"
        android:layout_width="89dp"
        android:layout_height="40dp"
        android:layout_marginLeft="1035dp"
        android:layout_marginTop="725dp"
        android:background="@drawable/perviewbuttonselector"
        android:text="返回"
        android:textColor="#333333"
        android:textSize="13pt" />

    <TextView
        android:id="@+id/txvlogout"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="14dp"
        android:layout_marginTop="28dp"
        android:text="@string/logout"
        android:textColor="#25F2FF"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/txvstudentid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="469dp"
        android:layout_marginTop="78dp"
        android:text="学生考号："
        android:textColor="#333333"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/txvshowspname"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txvlogout"
        android:layout_alignBottom="@+id/txvlogout"
        android:layout_toLeftOf="@+id/txvlogout"
        android:textColor="#333333"
        android:textSize="10pt" />

</com.example.webview.tools.ResizeLayout>